出場レーサーを表示するコンポーネントRacerPeriodResultComponentを作成。

--- a/front-side/projects/main/src/styles.css
+++ b/front-side/projects/main/src/styles.css
@@ -5,3 +5,39 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+/* 1号艇 */
+.boat-color1 {
+  background-color: #eeeeee;
+  color: black;
+}
+
+/* 2号艇 */
+.boat-color2 {
+  background-color: #111111;
+  color: #ffffff
+}
+
+/* 3号艇 */
+.boat-color3 {
+  background-color: #d90000;
+  color: #ffffff;
+}
+
+/* 4号艇 */
+.boat-color4 {
+  background-color: #2d5cff;
+  color: #ffffff;
+}
+
+/* 5号艇 */
+.boat-color5 {
+  background-color: #ffdc00;
+  color: #111111;
+}
+
+/* 6号艇 */
+.boat-color6 {
+  background-color: #2db200;
+  color: #ffffff;
+}
