--- a/front-side/projects/main/src/styles.css
+++ b/front-side/projects/main/src/styles.css
@@ -3,8 +3,15 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body { 
+  height: 100%;
+  font-size: 8px;
+}
+
+body { 
+  margin: 0; 
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 /* 1号艇 */
 .boat-color1 {
